[package]
name = "diesel_demo"
version = "0.1.0"
authors = ["Sean Griffin <sean@seantheprogrammer.com>"]
build = "build.rs"

[build-dependencies]
syntex = { version = "0.31.0", optional = true }
diesel_codegen = { version = "0.6.1", default-features = false, features = ["postgres"] }
dotenv_codegen = { version = "0.8.1",  optional = true }

[dependencies]
diesel = "0.6.1"
diesel_codegen = { version = "0.6.1", default-features = false, features = ["postgres"] }
dotenv = "0.8.0"
dotenv_macros = { version = "0.8.0", optional = true }

[features]
default = ["nightly"]
with-syntex = ["syntex", "diesel_codegen/with-syntex", "dotenv_codegen"]
nightly = ["diesel/unstable", "diesel_codegen/nightly", "dotenv_macros"]
