[package]
name = "diesel_demo"
version = "0.1.0"
authors = ["Sean Griffin <sean@seantheprogrammer.com>"]

[build-dependencies]
#syntex = { version = "0.31", optional = true }
diesel_codegen = { version = "0.7", default-features = false, features = ["postgres"] }
dotenv_codegen = { version = "0.9",  optional = true }

[dependencies]
diesel = { version = "0.7", default-features = false, features = ["postgres"] }
diesel_codegen = { version = "0.7", default-features = false, features = ["postgres"] }
dotenv = "0.8"
dotenv_macros = "0.9"
